@@ -24,7 +24,7 @@
     "date": {
       "field": "mongodb.log.timestamp",
       "target_field": "@timestamp",
-      "formats": ["YYYY-MM-DD'T'HH:mm:ss.SSSZZ"]
+      "formats": ["yyyy-MM-dd'T'HH:mm:ss.SSSZZ"]
     }
   },
   {
