@@ -45,6 +45,8 @@ https://github.com/elastic/beats/compare/v6.4.0...6.x[Check the HEAD diff]
 
 *Filebeat*
 
+- Fix date format in Mongodb Ingest pipeline. {pull}7974[7974]
+
 *Heartbeat*
 
 *Metricbeat*
